--- a/roles/mirror/templates/mirrors.conf.j2
+++ b/roles/mirror/templates/mirrors.conf.j2
@@ -1,10 +1,9 @@
-<VirtualHost *:{[ mirrors_server_port }}>
-  ServerName {{ ansible_hostname }}
-
+<VirtualHost *:{{ mirror_server_port }}>
   DocumentRoot {{ mirror_server_docroot }}
-  <Directory {{ mirror_server_docroot }}>
-    Order deny,allow
-    Allow from all
+  Alias / {{ mirror_server_docroot }}/
+  <Directory "{{ mirror_server_docroot }}">
+    Require all granted
+    Options +Indexes +FollowSymlinks
   </Directory>
 
 </VirtualHost>
